<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.items.ItemsAddFragment">

    <Button
        android:id="@+id/itemAddChooseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"

        android:layout_marginTop="32dp"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        android:text="@string/item_add_select_btn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddImageView" />

    <Button
        android:id="@+id/itemAddCameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        android:text="@string/item_add_btn_camera"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemAddInputLayoutDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddChooseBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemAddEditTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_add_desc_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/itemAddImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemAddInputLayoutTask"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddInputLayoutDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemAddEditTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_add_task_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/itemAddSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/item_add_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddInputLayoutTask" />

    <Button
        android:id="@+id/itemAddCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_add_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAddInputLayoutTask"
        android:backgroundTint="@color/design_default_color_error"/>


</androidx.constraintlayout.widget.ConstraintLayout>